--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -53,5 +52,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- إضافة الربط البرمجي المفقود -->
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
